# django-resonant-utils

./: .copier-answers.resonant-meta.yml  .editorconfig  .git-blame-ignore-revs  README.md  pyproject.toml  setup.py  tox.ini
.github/: renovate.json5
.github/workflows/: ci.yml  release.yml
girder_utils/: __init__.py  admin.py  allauth.py  apps.py  db.py  files.py  forms.py  models.py  rest.py  rest_framework.py  storages.py  templatetags.py
girder_utils/templatetags/: girder_utils.py
resonant_utils/: __init__.py  admin.py  allauth.py  apps.py  db.py  files.py  management.py  middleware.py  ninja.py  rest_framework.py  storages.py
resonant_utils/templatetags/: resonant_utils.py
stubs/minio_storage/: storage.pyi
stubs/storages/: base.pyi  compress.pyi
stubs/storages/backends/: s3.pyi  s3boto3.pyi
tests/test_app/: settings.py
