[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "django-resonant-utils"
description = "Django utilities for data management applications."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE"]
maintainers = [{ name = "Kitware, Inc.", email = "kitware@kitware.com" }]
keywords = [
  "django",
  "resonant",
  "kitware-resonant",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 5",
  "Framework :: Django :: 5.2",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python",
]
dependencies = [
  "django>=4.2",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/kitware-resonant/django-resonant-utils"
"Bug Reports" = "https://github.com/kitware-resonant/django-resonant-utils/issues"

[project.optional-dependencies]
allauth = [
  "django-allauth",
]
rest_framework = [
  "djangorestframework",
]
minio_storage = [
  "django-minio-storage",
]
s3_storage = [
  "django-storages[s3]>=1.14",
]

[dependency-groups]
dev = [
  "tox",
  "tox-uv",
]
lint = [
  "flake8",
  "flake8-black",
  "flake8-bugbear",
  "flake8-docstrings",
  "flake8-isort",
  "pep8-naming",
]
format = [
  "black",
  "isort",
]
type = [
  "mypy",
  "django-stubs[compatible-mypy]",
  "djangorestframework-stubs",
]

[tool.hatch.build]
only-include = [
  "resonant_utils",
]

[tool.hatch.version]
source = "vcs"

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 100
# Sort by name, don't cluster "from" vs "import"
force_sort_within_sections = true
# Combines "as" imports on the same line
combine_as_imports = true

[tool.mypy]
files = [
  "resonant_utils",
]
check_untyped_defs = true
show_error_codes = true
strict = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
mypy_path = [
  "$MYPY_CONFIG_FILE_DIR/stubs",
]
