[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "django-resonant-utils"
description = "Django utilities for data management applications."
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
maintainers = [{ name = "Kitware, Inc.", email = "kitware@kitware.com" }]
keywords = [
  "django",
  "resonant",
  "kitware-resonant",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 5",
  "Framework :: Django :: 5.2",
  "Framework :: Django :: 6",
  "Framework :: Django :: 6.0",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "django>=5.2",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/kitware-resonant/django-resonant-utils"
"Bug Reports" = "https://github.com/kitware-resonant/django-resonant-utils/issues"

[project.optional-dependencies]
allauth = [
  "django-allauth",
]
rest_framework = [
  "djangorestframework",
]
minio_storage = [
  "django-minio-storage",
]
s3_storage = [
  "django-storages[s3]>=1.14",
]

[dependency-groups]
dev = [
  "tox==4.34.1",
  "tox-uv==1.29.0",
]
lint = [
  "ruff==0.15.0",
]
type = [
  "mypy==1.19.1",
  "django-stubs[compatible-mypy]==5.2.9",
  "djangorestframework-stubs==3.16.8",
]

[tool.hatch.build]
only-include = [
  "resonant_utils",
]

[tool.hatch.version]
source = "vcs"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  # Incompatible with formatter
  # https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
  "COM812", # missing-trailing-comma
  "COM819", # prohibited-trailing-comma
  "D206", # docstring-tab-indentation
  "D300", # triple-single-quotes
  "E111", # indentation-with-invalid-multiple
  "E114", # indentation-with-invalid-multiple-comment
  "E117", # over-indented
  "ISC001", # single-line-implicit-string-concatenation
  "ISC002", # multi-line-implicit-string-concatenation
  "Q", # flake8-quotes
  "W191", # tab-indentation

  # Incompatible with Django
  "A003", # builtin-attribute-shadowing
  "ARG001", # unused-function-argument
  "ARG002", # unused-method-argument
  "RUF012", # mutable-class-default

  # Overly burdensome
  "ANN", # flake8-annotations
  "D1", # undocumented-*
  "EM101", # raw-string-in-exception
  "ERA001", # commented-out-code
  "FIX", # flake8-fixme
  "RET506", # superfluous-else-raise
  "TD002", # missing-todo-author
  "TD003", # missing-todo-link
  "TRY003", # raise-vanilla-args

  # Project-specific
]

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = [
  "DJ007", # django-all-with-model-form
  "DJ008", # django-model-without-dunder-str
  "INP001", # implicit-namespace-package
  "PLR0913", # too-many-arguments
  "PLR2004", # magic-value-comparison
  "S", # flake8-bandit
  "SLF001", # private-member-access
]

[tool.ruff.lint.flake8-self]
extend-ignore-names = ["_base_manager", "_default_manager",  "_meta"]

[tool.ruff.lint.isort]
# Sort by name, don't cluster "from" vs "import"
force-sort-within-sections = true
# Deferred annotations allows TC* rules to move more imports into TYPE_CHECKING blocks
required-imports = ["from __future__ import annotations"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.mypy]
files = [
  "resonant_utils",
]
check_untyped_defs = true
show_error_codes = true
strict = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
mypy_path = [
  "$MYPY_CONFIG_FILE_DIR/stubs",
]
